Add --debug-query and --verbose options, add setPrefixes method to RDFReader